--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Bbokkibbokki</string>
     <string name="adult_start">커플 모드</string>
     <string name="original_start">오리지널 모드</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
